// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker Controlled Date Picker - Date/Time mode should call the onDateChange component method with proper value when selecting a month after browsing months panel 1`] = `
<body>
  <div>
    <div>
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <div
            class="HelperText"
          >
            <div
              style="position: relative; width: 100%;"
            >
              <input
                aria-labelledby="date"
                class="TextField blue md icon-left show-icon"
                placeholder="Choose Date"
                type="text"
                value="2024/08/09 04:28 PM"
              />
              <button
                aria-label="Choose Date"
                class="icon-button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  data-jest-file-name="HiMiniCalendarDays.svg"
                  data-jest-svg-name="HiMiniCalendarDays"
                  data-testid="HiMiniCalendarDays"
                />
              </button>
            </div>
          </div>
          <span
            id="date"
            style="visibility: hidden;"
          >
            August 9, 2024
          </span>
        </div>
        <div>
          <div
            aria-label="Choose a date"
            aria-modal="true"
            class="Panel md not-range-picker dtp-enter dtp-enter-active"
            role="dialog"
            style="position: absolute; top: 5px; left: 0px;"
          >
            <div
              class="DateTimeSwitcher md"
            >
              <button
                aria-label="Switch to days view"
                class="DateTimeSwitcherButton blue md selected"
                style="border-top-left-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiCalendarDays.svg"
                  data-jest-svg-name="HiCalendarDays"
                  data-testid="HiCalendarDays"
                />
              </button>
              <button
                aria-label="Switch to time view"
                class="DateTimeSwitcherButton blue md"
                style="border-top-right-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiClock.svg"
                  data-jest-svg-name="HiClock"
                  data-testid="HiClock"
                />
              </button>
            </div>
            <div
              class="ChoicePanel md"
              data-test="month-panel"
            >
              <div
                aria-live="polite"
                class="PanelHeader md"
              >
                <button
                  aria-label="Previous Year"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronLeft.svg"
                    data-jest-svg-name="HiChevronLeft"
                    data-testid="HiChevronLeft"
                  />
                </button>
                <div
                  class="PanelHeader-content"
                >
                  <span>
                    2024
                  </span>
                </div>
                <button
                  aria-label="Next Year"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronRight.svg"
                    data-jest-svg-name="HiChevronRight"
                    data-testid="HiChevronRight"
                  />
                </button>
              </div>
              <div
                class="panel-grid"
                role="grid"
              >
                <button
                  aria-label="Choose January"
                  class="PanelButton blue md"
                  data-date="1704817693000"
                >
                  January
                </button>
                <button
                  aria-label="Choose February"
                  class="PanelButton blue md"
                  data-date="1707496093000"
                >
                  February
                </button>
                <button
                  aria-label="Choose March"
                  class="PanelButton blue md"
                  data-date="1710001693000"
                >
                  March
                </button>
                <button
                  aria-label="Choose April"
                  class="PanelButton blue md"
                  data-date="1712680093000"
                >
                  April
                </button>
                <button
                  aria-label="Choose May"
                  class="PanelButton blue md"
                  data-date="1715272093000"
                >
                  May
                </button>
                <button
                  aria-label="Choose June"
                  class="PanelButton blue md"
                  data-date="1717950493000"
                >
                  June
                </button>
                <button
                  aria-label="Choose July"
                  class="PanelButton blue md"
                  data-date="1720542493000"
                >
                  July
                </button>
                <button
                  aria-label="Choose August"
                  class="PanelButton blue md selected"
                  data-date="1723220893000"
                >
                  August
                </button>
                <button
                  aria-label="Choose September"
                  class="PanelButton blue md"
                  data-date="1725899293000"
                >
                  September
                </button>
                <button
                  aria-label="Choose October"
                  class="PanelButton blue md"
                  data-date="1728491293000"
                >
                  October
                </button>
                <button
                  aria-label="Choose November"
                  class="PanelButton blue md"
                  data-date="1731169693000"
                >
                  November
                </button>
                <button
                  aria-label="Choose December"
                  class="PanelButton blue md"
                  data-date="1733761693000"
                >
                  December
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        data-test="current-value"
      >
        8/9/2024, 4:28 PM
      </span>
    </div>
  </div>
</body>
`;

exports[`DateTimePicker Controlled Date Picker - Date/Time mode should call the onDateChange component method with proper value when selecting a month after browsing months panel 2`] = `
<body>
  <div>
    <div>
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <div
            class="HelperText"
          >
            <div
              style="position: relative; width: 100%;"
            >
              <input
                aria-labelledby="date"
                class="TextField blue md icon-left show-icon"
                placeholder="Choose Date"
                type="text"
                value="2024/08/09 04:28 PM"
              />
              <button
                aria-label="Choose Date"
                class="icon-button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  data-jest-file-name="HiMiniCalendarDays.svg"
                  data-jest-svg-name="HiMiniCalendarDays"
                  data-testid="HiMiniCalendarDays"
                />
              </button>
            </div>
          </div>
          <span
            id="date"
            style="visibility: hidden;"
          >
            August 9, 2024
          </span>
        </div>
        <div>
          <div
            aria-label="Choose a date"
            aria-modal="true"
            class="Panel md not-range-picker dtp-enter dtp-enter-active"
            role="dialog"
            style="position: absolute; top: 5px; left: 0px;"
          >
            <div
              class="DateTimeSwitcher md"
            >
              <button
                aria-label="Switch to days view"
                class="DateTimeSwitcherButton blue md selected"
                style="border-top-left-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiCalendarDays.svg"
                  data-jest-svg-name="HiCalendarDays"
                  data-testid="HiCalendarDays"
                />
              </button>
              <button
                aria-label="Switch to time view"
                class="DateTimeSwitcherButton blue md"
                style="border-top-right-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiClock.svg"
                  data-jest-svg-name="HiClock"
                  data-testid="HiClock"
                />
              </button>
            </div>
            <div
              class="ChoicePanel md"
              data-test="month-panel"
            >
              <div
                aria-live="polite"
                class="PanelHeader md"
              >
                <button
                  aria-label="Previous Year"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronLeft.svg"
                    data-jest-svg-name="HiChevronLeft"
                    data-testid="HiChevronLeft"
                  />
                </button>
                <div
                  class="PanelHeader-content"
                >
                  <span>
                    2027
                  </span>
                </div>
                <button
                  aria-label="Next Year"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronRight.svg"
                    data-jest-svg-name="HiChevronRight"
                    data-testid="HiChevronRight"
                  />
                </button>
              </div>
              <div
                class="panel-grid"
                role="grid"
              >
                <button
                  aria-label="Choose January"
                  class="PanelButton blue md"
                  data-date="1799512093000"
                >
                  January
                </button>
                <button
                  aria-label="Choose February"
                  class="PanelButton blue md"
                  data-date="1802190493000"
                >
                  February
                </button>
                <button
                  aria-label="Choose March"
                  class="PanelButton blue md"
                  data-date="1804609693000"
                >
                  March
                </button>
                <button
                  aria-label="Choose April"
                  class="PanelButton blue md"
                  data-date="1807288093000"
                >
                  April
                </button>
                <button
                  aria-label="Choose May"
                  class="PanelButton blue md"
                  data-date="1809880093000"
                >
                  May
                </button>
                <button
                  aria-label="Choose June"
                  class="PanelButton blue md"
                  data-date="1812558493000"
                >
                  June
                </button>
                <button
                  aria-label="Choose July"
                  class="PanelButton blue md"
                  data-date="1815150493000"
                >
                  July
                </button>
                <button
                  aria-label="Choose August"
                  class="PanelButton blue md selected"
                  data-date="1817828893000"
                >
                  August
                </button>
                <button
                  aria-label="Choose September"
                  class="PanelButton blue md"
                  data-date="1820507293000"
                >
                  September
                </button>
                <button
                  aria-label="Choose October"
                  class="PanelButton blue md"
                  data-date="1823099293000"
                >
                  October
                </button>
                <button
                  aria-label="Choose November"
                  class="PanelButton blue md"
                  data-date="1825777693000"
                >
                  November
                </button>
                <button
                  aria-label="Choose December"
                  class="PanelButton blue md"
                  data-date="1828369693000"
                >
                  December
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        data-test="current-value"
      >
        8/9/2024, 4:28 PM
      </span>
    </div>
  </div>
</body>
`;

exports[`DateTimePicker Controlled Date Picker - Date/Time mode should call the onDateChange component method with proper value when selecting a month after browsing months panel 3`] = `
<body>
  <div>
    <div>
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <div
            class="HelperText"
          >
            <div
              style="position: relative; width: 100%;"
            >
              <input
                aria-labelledby="date"
                class="TextField blue md icon-left show-icon"
                placeholder="Choose Date"
                type="text"
                value="2027/02/09 04:28 PM"
              />
              <button
                aria-label="Choose Date"
                class="icon-button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  data-jest-file-name="HiMiniCalendarDays.svg"
                  data-jest-svg-name="HiMiniCalendarDays"
                  data-testid="HiMiniCalendarDays"
                />
              </button>
            </div>
          </div>
          <span
            id="date"
            style="visibility: hidden;"
          >
            February 9, 2027
          </span>
        </div>
        <div>
          <div
            aria-label="Choose a date"
            aria-modal="true"
            class="Panel md not-range-picker dtp-enter dtp-enter-active"
            role="dialog"
            style="position: absolute; top: 5px; left: 0px;"
          >
            <div
              class="DateTimeSwitcher md"
            >
              <button
                aria-label="Switch to days view"
                class="DateTimeSwitcherButton blue md selected"
                style="border-top-left-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiCalendarDays.svg"
                  data-jest-svg-name="HiCalendarDays"
                  data-testid="HiCalendarDays"
                />
              </button>
              <button
                aria-label="Switch to time view"
                class="DateTimeSwitcherButton blue md"
                style="border-top-right-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiClock.svg"
                  data-jest-svg-name="HiClock"
                  data-testid="HiClock"
                />
              </button>
            </div>
            <div
              data-test="date-panel"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-live="polite"
                class="PanelHeader md"
              >
                <button
                  aria-label="Previous Month"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronLeft.svg"
                    data-jest-svg-name="HiChevronLeft"
                    data-testid="HiChevronLeft"
                  />
                </button>
                <div
                  class="PanelHeader-content"
                >
                  <button
                    aria-label="February"
                    class="PanelHeaderButton blue"
                  >
                    <span>
                      February
                    </span>
                  </button>
                  <button
                    aria-label="2027"
                    class="PanelHeaderButton blue"
                  >
                    <span>
                      2027
                    </span>
                  </button>
                </div>
                <button
                  aria-label="Next Month"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronRight.svg"
                    data-jest-svg-name="HiChevronRight"
                    data-testid="HiChevronRight"
                  />
                </button>
              </div>
              <section
                class="DaysGrid md"
                data-test="days-grid"
                role="grid"
              >
                <abbr
                  class="week-day"
                  title="Monday"
                >
                  Mon
                </abbr>
                <abbr
                  class="week-day"
                  title="Tuesday"
                >
                  Tue
                </abbr>
                <abbr
                  class="week-day"
                  title="Wednesday"
                >
                  Wed
                </abbr>
                <abbr
                  class="week-day"
                  title="Thursday"
                >
                  Thu
                </abbr>
                <abbr
                  class="week-day"
                  title="Friday"
                >
                  Fri
                </abbr>
                <abbr
                  class="week-day"
                  title="Saturday"
                >
                  Sat
                </abbr>
                <abbr
                  class="week-day"
                  title="Sunday"
                >
                  Sun
                </abbr>
                <button
                  aria-disabled="false"
                  aria-label="February 1, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1801499293000"
                  data-test="1801499293000"
                  tabindex="0"
                >
                  1
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 2, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1801585693000"
                  data-test="1801585693000"
                  tabindex="-1"
                >
                  2
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 3, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1801672093000"
                  data-test="1801672093000"
                  tabindex="-1"
                >
                  3
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 4, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1801758493000"
                  data-test="1801758493000"
                  tabindex="-1"
                >
                  4
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 5, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1801844893000"
                  data-test="1801844893000"
                  tabindex="-1"
                >
                  5
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 6, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1801931293000"
                  data-test="1801931293000"
                  tabindex="-1"
                >
                  6
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 7, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802017693000"
                  data-test="1802017693000"
                  tabindex="-1"
                >
                  7
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 8, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802104093000"
                  data-test="1802104093000"
                  tabindex="-1"
                >
                  8
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 9, 2027"
                  aria-selected="true"
                  class="DaysGridCell enabled selected blue md"
                  data-date="1802190493000"
                  data-test="1802190493000"
                  tabindex="-1"
                >
                  9
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 10, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802276893000"
                  data-test="1802276893000"
                  tabindex="-1"
                >
                  10
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 11, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802363293000"
                  data-test="1802363293000"
                  tabindex="-1"
                >
                  11
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 12, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802449693000"
                  data-test="1802449693000"
                  tabindex="-1"
                >
                  12
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 13, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802536093000"
                  data-test="1802536093000"
                  tabindex="-1"
                >
                  13
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 14, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802622493000"
                  data-test="1802622493000"
                  tabindex="-1"
                >
                  14
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 15, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802708893000"
                  data-test="1802708893000"
                  tabindex="-1"
                >
                  15
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 16, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802795293000"
                  data-test="1802795293000"
                  tabindex="-1"
                >
                  16
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 17, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802881693000"
                  data-test="1802881693000"
                  tabindex="-1"
                >
                  17
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 18, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1802968093000"
                  data-test="1802968093000"
                  tabindex="-1"
                >
                  18
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 19, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803054493000"
                  data-test="1803054493000"
                  tabindex="-1"
                >
                  19
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 20, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803140893000"
                  data-test="1803140893000"
                  tabindex="-1"
                >
                  20
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 21, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803227293000"
                  data-test="1803227293000"
                  tabindex="-1"
                >
                  21
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 22, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803313693000"
                  data-test="1803313693000"
                  tabindex="-1"
                >
                  22
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 23, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803400093000"
                  data-test="1803400093000"
                  tabindex="-1"
                >
                  23
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 24, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803486493000"
                  data-test="1803486493000"
                  tabindex="-1"
                >
                  24
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 25, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803572893000"
                  data-test="1803572893000"
                  tabindex="-1"
                >
                  25
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 26, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803659293000"
                  data-test="1803659293000"
                  tabindex="-1"
                >
                  26
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 27, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803745693000"
                  data-test="1803745693000"
                  tabindex="-1"
                >
                  27
                </button>
                <button
                  aria-disabled="false"
                  aria-label="February 28, 2027"
                  aria-selected="false"
                  class="DaysGridCell enabled blue md"
                  data-date="1803832093000"
                  data-test="1803832093000"
                  tabindex="-1"
                >
                  28
                </button>
              </section>
            </div>
          </div>
        </div>
      </div>
      <span
        data-test="current-value"
      >
        2/9/2027, 4:28 PM
      </span>
    </div>
  </div>
</body>
`;

exports[`DateTimePicker with timezone Basic behavior - Date/Time mode should display a previously selected date as an slightly highlighted grid cell 1`] = `
<body>
  <div>
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <div
          class="HelperText"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <input
              aria-labelledby="date"
              class="TextField blue md icon-left show-icon"
              placeholder="Choose Date"
              type="text"
              value="2025/04/01 12:28 PM"
            />
            <button
              aria-label="Choose Date"
              class="icon-button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon"
                data-jest-file-name="HiMiniCalendarDays.svg"
                data-jest-svg-name="HiMiniCalendarDays"
                data-testid="HiMiniCalendarDays"
              />
            </button>
          </div>
        </div>
        <span
          id="date"
          style="visibility: hidden;"
        >
          April 1, 2025
        </span>
      </div>
      <div>
        <div
          aria-label="Choose a date"
          aria-modal="true"
          class="Panel md not-range-picker dtp-exit dtp-exit-active"
          role="dialog"
          style="position: absolute; top: 5px; left: 0px;"
        >
          <div
            class="DateTimeSwitcher md"
          >
            <button
              aria-label="Switch to days view"
              class="DateTimeSwitcherButton blue md selected"
              style="border-top-left-radius: 0.5rem;"
            >
              <svg
                aria-hidden="true"
                data-jest-file-name="HiCalendarDays.svg"
                data-jest-svg-name="HiCalendarDays"
                data-testid="HiCalendarDays"
              />
            </button>
            <button
              aria-label="Switch to time view"
              class="DateTimeSwitcherButton blue md"
              style="border-top-right-radius: 0.5rem;"
            >
              <svg
                aria-hidden="true"
                data-jest-file-name="HiClock.svg"
                data-jest-svg-name="HiClock"
                data-testid="HiClock"
              />
            </button>
          </div>
          <div
            data-test="date-panel"
            style="display: flex; flex-direction: column;"
          >
            <div
              aria-live="polite"
              class="PanelHeader md"
            >
              <button
                aria-label="Previous Month"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiChevronLeft.svg"
                  data-jest-svg-name="HiChevronLeft"
                  data-testid="HiChevronLeft"
                />
              </button>
              <div
                class="PanelHeader-content"
              >
                <button
                  aria-label="April"
                  class="PanelHeaderButton blue"
                >
                  <span>
                    April
                  </span>
                </button>
                <button
                  aria-label="2025"
                  class="PanelHeaderButton blue"
                >
                  <span>
                    2025
                  </span>
                </button>
              </div>
              <button
                aria-label="Next Month"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiChevronRight.svg"
                  data-jest-svg-name="HiChevronRight"
                  data-testid="HiChevronRight"
                />
              </button>
            </div>
            <section
              class="DaysGrid md"
              data-test="days-grid"
              role="grid"
            >
              <abbr
                class="week-day"
                title="Monday"
              >
                Mon
              </abbr>
              <abbr
                class="week-day"
                title="Tuesday"
              >
                Tue
              </abbr>
              <abbr
                class="week-day"
                title="Wednesday"
              >
                Wed
              </abbr>
              <abbr
                class="week-day"
                title="Thursday"
              >
                Thu
              </abbr>
              <abbr
                class="week-day"
                title="Friday"
              >
                Fri
              </abbr>
              <abbr
                class="week-day"
                title="Saturday"
              >
                Sat
              </abbr>
              <abbr
                class="week-day"
                title="Sunday"
              >
                Sun
              </abbr>
              <div
                role="gridcell"
              />
              <button
                aria-disabled="false"
                aria-label="April 1, 2025"
                aria-selected="true"
                class="DaysGridCell enabled selected blue md"
                data-date="1743510493000"
                data-test="1743510493000"
                tabindex="0"
              >
                1
              </button>
              <button
                aria-disabled="false"
                aria-label="April 2, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743596893000"
                data-test="1743596893000"
                tabindex="-1"
              >
                2
              </button>
              <button
                aria-disabled="false"
                aria-label="April 3, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743683293000"
                data-test="1743683293000"
                tabindex="-1"
              >
                3
              </button>
              <button
                aria-disabled="false"
                aria-label="April 4, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743769693000"
                data-test="1743769693000"
                tabindex="-1"
              >
                4
              </button>
              <button
                aria-disabled="false"
                aria-label="April 5, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743856093000"
                data-test="1743856093000"
                tabindex="-1"
              >
                5
              </button>
              <button
                aria-disabled="false"
                aria-label="April 6, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743942493000"
                data-test="1743942493000"
                tabindex="-1"
              >
                6
              </button>
              <button
                aria-disabled="false"
                aria-label="April 7, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744028893000"
                data-test="1744028893000"
                tabindex="-1"
              >
                7
              </button>
              <button
                aria-disabled="false"
                aria-label="April 8, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744115293000"
                data-test="1744115293000"
                tabindex="-1"
              >
                8
              </button>
              <button
                aria-disabled="false"
                aria-label="April 9, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744201693000"
                data-test="1744201693000"
                tabindex="-1"
              >
                9
              </button>
              <button
                aria-disabled="false"
                aria-label="April 10, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744288093000"
                data-test="1744288093000"
                tabindex="-1"
              >
                10
              </button>
              <button
                aria-disabled="false"
                aria-label="April 11, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744374493000"
                data-test="1744374493000"
                tabindex="-1"
              >
                11
              </button>
              <button
                aria-disabled="false"
                aria-label="April 12, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744460893000"
                data-test="1744460893000"
                tabindex="-1"
              >
                12
              </button>
              <button
                aria-disabled="false"
                aria-label="April 13, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744547293000"
                data-test="1744547293000"
                tabindex="-1"
              >
                13
              </button>
              <button
                aria-disabled="false"
                aria-label="April 14, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744633693000"
                data-test="1744633693000"
                tabindex="-1"
              >
                14
              </button>
              <button
                aria-disabled="false"
                aria-label="April 15, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744720093000"
                data-test="1744720093000"
                tabindex="-1"
              >
                15
              </button>
              <button
                aria-disabled="false"
                aria-label="April 16, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744806493000"
                data-test="1744806493000"
                tabindex="-1"
              >
                16
              </button>
              <button
                aria-disabled="false"
                aria-label="April 17, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744892893000"
                data-test="1744892893000"
                tabindex="-1"
              >
                17
              </button>
              <button
                aria-disabled="false"
                aria-label="April 18, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1744979293000"
                data-test="1744979293000"
                tabindex="-1"
              >
                18
              </button>
              <button
                aria-disabled="false"
                aria-label="April 19, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745065693000"
                data-test="1745065693000"
                tabindex="-1"
              >
                19
              </button>
              <button
                aria-disabled="false"
                aria-label="April 20, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745152093000"
                data-test="1745152093000"
                tabindex="-1"
              >
                20
              </button>
              <button
                aria-disabled="false"
                aria-label="April 21, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745238493000"
                data-test="1745238493000"
                tabindex="-1"
              >
                21
              </button>
              <button
                aria-disabled="false"
                aria-label="April 22, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745324893000"
                data-test="1745324893000"
                tabindex="-1"
              >
                22
              </button>
              <button
                aria-disabled="false"
                aria-label="April 23, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745411293000"
                data-test="1745411293000"
                tabindex="-1"
              >
                23
              </button>
              <button
                aria-disabled="false"
                aria-label="April 24, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745497693000"
                data-test="1745497693000"
                tabindex="-1"
              >
                24
              </button>
              <button
                aria-disabled="false"
                aria-label="April 25, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745584093000"
                data-test="1745584093000"
                tabindex="-1"
              >
                25
              </button>
              <button
                aria-disabled="false"
                aria-label="April 26, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745670493000"
                data-test="1745670493000"
                tabindex="-1"
              >
                26
              </button>
              <button
                aria-disabled="false"
                aria-label="April 27, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745756893000"
                data-test="1745756893000"
                tabindex="-1"
              >
                27
              </button>
              <button
                aria-disabled="false"
                aria-label="April 28, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745843293000"
                data-test="1745843293000"
                tabindex="-1"
              >
                28
              </button>
              <button
                aria-disabled="false"
                aria-label="April 29, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1745929693000"
                data-test="1745929693000"
                tabindex="-1"
              >
                29
              </button>
              <button
                aria-disabled="false"
                aria-label="April 30, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1746016093000"
                data-test="1746016093000"
                tabindex="-1"
              >
                30
              </button>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DateTimePicker with timezone Basic behavior - Date/Time mode should display today's date as an highlighted grid cell (selected on init) 1`] = `
<body>
  <div>
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <div
          class="HelperText"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <input
              aria-labelledby="date"
              class="TextField blue md icon-left show-icon"
              placeholder="Choose Date"
              type="text"
              value="2025/03/15 12:28 PM"
            />
            <button
              aria-label="Choose Date"
              class="icon-button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon"
                data-jest-file-name="HiMiniCalendarDays.svg"
                data-jest-svg-name="HiMiniCalendarDays"
                data-testid="HiMiniCalendarDays"
              />
            </button>
          </div>
        </div>
        <span
          id="date"
          style="visibility: hidden;"
        >
          March 15, 2025
        </span>
      </div>
      <div>
        <div
          aria-label="Choose a date"
          aria-modal="true"
          class="Panel md not-range-picker dtp-enter dtp-enter-active"
          role="dialog"
          style="position: absolute; top: 5px; left: 0px;"
        >
          <div
            class="DateTimeSwitcher md"
          >
            <button
              aria-label="Switch to days view"
              class="DateTimeSwitcherButton blue md selected"
              style="border-top-left-radius: 0.5rem;"
            >
              <svg
                aria-hidden="true"
                data-jest-file-name="HiCalendarDays.svg"
                data-jest-svg-name="HiCalendarDays"
                data-testid="HiCalendarDays"
              />
            </button>
            <button
              aria-label="Switch to time view"
              class="DateTimeSwitcherButton blue md"
              style="border-top-right-radius: 0.5rem;"
            >
              <svg
                aria-hidden="true"
                data-jest-file-name="HiClock.svg"
                data-jest-svg-name="HiClock"
                data-testid="HiClock"
              />
            </button>
          </div>
          <div
            data-test="date-panel"
            style="display: flex; flex-direction: column;"
          >
            <div
              aria-live="polite"
              class="PanelHeader md"
            >
              <button
                aria-label="Previous Month"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiChevronLeft.svg"
                  data-jest-svg-name="HiChevronLeft"
                  data-testid="HiChevronLeft"
                />
              </button>
              <div
                class="PanelHeader-content"
              >
                <button
                  aria-label="March"
                  class="PanelHeaderButton blue"
                >
                  <span>
                    March
                  </span>
                </button>
                <button
                  aria-label="2025"
                  class="PanelHeaderButton blue"
                >
                  <span>
                    2025
                  </span>
                </button>
              </div>
              <button
                aria-label="Next Month"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiChevronRight.svg"
                  data-jest-svg-name="HiChevronRight"
                  data-testid="HiChevronRight"
                />
              </button>
            </div>
            <section
              class="DaysGrid md"
              data-test="days-grid"
              role="grid"
            >
              <abbr
                class="week-day"
                title="Monday"
              >
                Mon
              </abbr>
              <abbr
                class="week-day"
                title="Tuesday"
              >
                Tue
              </abbr>
              <abbr
                class="week-day"
                title="Wednesday"
              >
                Wed
              </abbr>
              <abbr
                class="week-day"
                title="Thursday"
              >
                Thu
              </abbr>
              <abbr
                class="week-day"
                title="Friday"
              >
                Fri
              </abbr>
              <abbr
                class="week-day"
                title="Saturday"
              >
                Sat
              </abbr>
              <abbr
                class="week-day"
                title="Sunday"
              >
                Sun
              </abbr>
              <div
                role="gridcell"
              />
              <div
                role="gridcell"
              />
              <div
                role="gridcell"
              />
              <div
                role="gridcell"
              />
              <div
                role="gridcell"
              />
              <button
                aria-disabled="false"
                aria-label="March 1, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1740832093000"
                data-test="1740832093000"
                tabindex="0"
              >
                1
              </button>
              <button
                aria-disabled="false"
                aria-label="March 2, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1740918493000"
                data-test="1740918493000"
                tabindex="-1"
              >
                2
              </button>
              <button
                aria-disabled="false"
                aria-label="March 3, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741004893000"
                data-test="1741004893000"
                tabindex="-1"
              >
                3
              </button>
              <button
                aria-disabled="false"
                aria-label="March 4, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741091293000"
                data-test="1741091293000"
                tabindex="-1"
              >
                4
              </button>
              <button
                aria-disabled="false"
                aria-label="March 5, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741177693000"
                data-test="1741177693000"
                tabindex="-1"
              >
                5
              </button>
              <button
                aria-disabled="false"
                aria-label="March 6, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741264093000"
                data-test="1741264093000"
                tabindex="-1"
              >
                6
              </button>
              <button
                aria-disabled="false"
                aria-label="March 7, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741350493000"
                data-test="1741350493000"
                tabindex="-1"
              >
                7
              </button>
              <button
                aria-disabled="false"
                aria-label="March 8, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741436893000"
                data-test="1741436893000"
                tabindex="-1"
              >
                8
              </button>
              <button
                aria-disabled="false"
                aria-label="March 9, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741523293000"
                data-test="1741523293000"
                tabindex="-1"
              >
                9
              </button>
              <button
                aria-disabled="false"
                aria-label="March 10, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741609693000"
                data-test="1741609693000"
                tabindex="-1"
              >
                10
              </button>
              <button
                aria-disabled="false"
                aria-label="March 11, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741696093000"
                data-test="1741696093000"
                tabindex="-1"
              >
                11
              </button>
              <button
                aria-disabled="false"
                aria-label="March 12, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741782493000"
                data-test="1741782493000"
                tabindex="-1"
              >
                12
              </button>
              <button
                aria-disabled="false"
                aria-label="March 13, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741868893000"
                data-test="1741868893000"
                tabindex="-1"
              >
                13
              </button>
              <button
                aria-disabled="false"
                aria-label="March 14, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1741955293000"
                data-test="1741955293000"
                tabindex="-1"
              >
                14
              </button>
              <button
                aria-disabled="false"
                aria-label="March 15, 2025"
                aria-selected="true"
                class="DaysGridCell enabled selected today blue md"
                data-date="1742041693000"
                data-test="1742041693000"
                tabindex="-1"
              >
                15
              </button>
              <button
                aria-disabled="false"
                aria-label="March 16, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742128093000"
                data-test="1742128093000"
                tabindex="-1"
              >
                16
              </button>
              <button
                aria-disabled="false"
                aria-label="March 17, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742214493000"
                data-test="1742214493000"
                tabindex="-1"
              >
                17
              </button>
              <button
                aria-disabled="false"
                aria-label="March 18, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742300893000"
                data-test="1742300893000"
                tabindex="-1"
              >
                18
              </button>
              <button
                aria-disabled="false"
                aria-label="March 19, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742387293000"
                data-test="1742387293000"
                tabindex="-1"
              >
                19
              </button>
              <button
                aria-disabled="false"
                aria-label="March 20, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742473693000"
                data-test="1742473693000"
                tabindex="-1"
              >
                20
              </button>
              <button
                aria-disabled="false"
                aria-label="March 21, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742560093000"
                data-test="1742560093000"
                tabindex="-1"
              >
                21
              </button>
              <button
                aria-disabled="false"
                aria-label="March 22, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742646493000"
                data-test="1742646493000"
                tabindex="-1"
              >
                22
              </button>
              <button
                aria-disabled="false"
                aria-label="March 23, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742732893000"
                data-test="1742732893000"
                tabindex="-1"
              >
                23
              </button>
              <button
                aria-disabled="false"
                aria-label="March 24, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742819293000"
                data-test="1742819293000"
                tabindex="-1"
              >
                24
              </button>
              <button
                aria-disabled="false"
                aria-label="March 25, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742905693000"
                data-test="1742905693000"
                tabindex="-1"
              >
                25
              </button>
              <button
                aria-disabled="false"
                aria-label="March 26, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1742992093000"
                data-test="1742992093000"
                tabindex="-1"
              >
                26
              </button>
              <button
                aria-disabled="false"
                aria-label="March 27, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743078493000"
                data-test="1743078493000"
                tabindex="-1"
              >
                27
              </button>
              <button
                aria-disabled="false"
                aria-label="March 28, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743164893000"
                data-test="1743164893000"
                tabindex="-1"
              >
                28
              </button>
              <button
                aria-disabled="false"
                aria-label="March 29, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743251293000"
                data-test="1743251293000"
                tabindex="-1"
              >
                29
              </button>
              <button
                aria-disabled="false"
                aria-label="March 30, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743337693000"
                data-test="1743337693000"
                tabindex="-1"
              >
                30
              </button>
              <button
                aria-disabled="false"
                aria-label="March 31, 2025"
                aria-selected="false"
                class="DaysGridCell enabled blue md"
                data-date="1743424093000"
                data-test="1743424093000"
                tabindex="-1"
              >
                31
              </button>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DateTimePicker with timezone Basic behavior - Date/Time mode should show 12 previous years in panel on previous button click 1`] = `
<body>
  <div>
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <div
          class="HelperText"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <input
              aria-labelledby="date"
              class="TextField blue md icon-left show-icon"
              placeholder="Choose Date"
              type="text"
              value="2025/03/15 12:28 PM"
            />
            <button
              aria-label="Choose Date"
              class="icon-button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon"
                data-jest-file-name="HiMiniCalendarDays.svg"
                data-jest-svg-name="HiMiniCalendarDays"
                data-testid="HiMiniCalendarDays"
              />
            </button>
          </div>
        </div>
        <span
          id="date"
          style="visibility: hidden;"
        >
          March 15, 2025
        </span>
      </div>
      <div>
        <div
          aria-label="Choose a date"
          aria-modal="true"
          class="Panel md not-range-picker dtp-enter dtp-enter-active"
          role="dialog"
          style="position: absolute; top: 5px; left: 0px;"
        >
          <div
            class="DateTimeSwitcher md"
          >
            <button
              aria-label="Switch to days view"
              class="DateTimeSwitcherButton blue md selected"
              style="border-top-left-radius: 0.5rem;"
            >
              <svg
                aria-hidden="true"
                data-jest-file-name="HiCalendarDays.svg"
                data-jest-svg-name="HiCalendarDays"
                data-testid="HiCalendarDays"
              />
            </button>
            <button
              aria-label="Switch to time view"
              class="DateTimeSwitcherButton blue md"
              style="border-top-right-radius: 0.5rem;"
            >
              <svg
                aria-hidden="true"
                data-jest-file-name="HiClock.svg"
                data-jest-svg-name="HiClock"
                data-testid="HiClock"
              />
            </button>
          </div>
          <div
            class="ChoicePanel md"
            data-test="year-panel"
          >
            <div
              aria-live="polite"
              class="PanelHeader md"
            >
              <button
                aria-label="Previous 12 years"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiChevronLeft.svg"
                  data-jest-svg-name="HiChevronLeft"
                  data-testid="HiChevronLeft"
                />
              </button>
              <div
                class="PanelHeader-content"
              >
                <span
                  aria-label="2013"
                >
                  2013
                </span>
                 - 
                <span
                  aria-label="2024"
                >
                  2024
                </span>
              </div>
              <button
                aria-label="Next 12 years"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiChevronRight.svg"
                  data-jest-svg-name="HiChevronRight"
                  data-testid="HiChevronRight"
                />
              </button>
            </div>
            <div
              class="panel-grid"
              role="grid"
            >
              <button
                aria-label="Choose 2013"
                class="PanelButton blue md"
                data-date="1363350493000"
              >
                2013
              </button>
              <button
                aria-label="Choose 2014"
                class="PanelButton blue md"
                data-date="1394886493000"
              >
                2014
              </button>
              <button
                aria-label="Choose 2015"
                class="PanelButton blue md"
                data-date="1426422493000"
              >
                2015
              </button>
              <button
                aria-label="Choose 2016"
                class="PanelButton blue md"
                data-date="1458044893000"
              >
                2016
              </button>
              <button
                aria-label="Choose 2017"
                class="PanelButton blue md"
                data-date="1489580893000"
              >
                2017
              </button>
              <button
                aria-label="Choose 2018"
                class="PanelButton blue md"
                data-date="1521116893000"
              >
                2018
              </button>
              <button
                aria-label="Choose 2019"
                class="PanelButton blue md"
                data-date="1552652893000"
              >
                2019
              </button>
              <button
                aria-label="Choose 2020"
                class="PanelButton blue md"
                data-date="1584275293000"
              >
                2020
              </button>
              <button
                aria-label="Choose 2021"
                class="PanelButton blue md"
                data-date="1615811293000"
              >
                2021
              </button>
              <button
                aria-label="Choose 2022"
                class="PanelButton blue md"
                data-date="1647347293000"
              >
                2022
              </button>
              <button
                aria-label="Choose 2023"
                class="PanelButton blue md"
                data-date="1678883293000"
              >
                2023
              </button>
              <button
                aria-label="Choose 2024"
                class="PanelButton blue md"
                data-date="1710505693000"
              >
                2024
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DateTimePicker with timezone Basic behavior - Date/Time mode should show days panel content on icon click 1`] = `
<div>
  <div
    style="position: relative;"
  >
    <div
      style="position: relative;"
    >
      <div
        class="HelperText"
      >
        <div
          style="position: relative; width: 100%;"
        >
          <input
            aria-labelledby="date"
            class="TextField blue md icon-left show-icon"
            placeholder="Choose Date"
            type="text"
            value="2025-03-15 12:28 PM"
          />
          <button
            aria-label="Choose Date"
            class="icon-button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="icon"
              data-jest-file-name="HiMiniCalendarDays.svg"
              data-jest-svg-name="HiMiniCalendarDays"
              data-testid="HiMiniCalendarDays"
            />
          </button>
        </div>
      </div>
      <span
        id="date"
        style="visibility: hidden;"
      >
        March 15, 2025
      </span>
    </div>
  </div>
</div>
`;

exports[`DateTimePicker with timezone Controlled Date Picker - Date/Time mode should render w/ the provided date in the text field 1`] = `
<div>
  <div>
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <div
          class="HelperText"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <input
              aria-labelledby="date"
              class="TextField blue md icon-left show-icon"
              placeholder="Choose Date"
              type="text"
              value="2024-08-09 01:28 PM"
            />
            <button
              aria-label="Choose Date"
              class="icon-button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon"
                data-jest-file-name="HiMiniCalendarDays.svg"
                data-jest-svg-name="HiMiniCalendarDays"
                data-testid="HiMiniCalendarDays"
              />
            </button>
          </div>
        </div>
        <span
          id="date"
          style="visibility: hidden;"
        >
          August 9, 2024
        </span>
      </div>
    </div>
    <span
      data-test="current-value"
    >
      8/9/2024, 1:28 PM
    </span>
  </div>
</div>
`;

exports[`DateTimePicker with timezone Controlled Time Picker - (en) should render w/ the provided date in the text field 1`] = `
<div>
  <div>
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <div
          class="HelperText"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <input
              aria-labelledby="date"
              class="TextField blue md icon-left show-icon"
              placeholder="Choose Date"
              type="text"
              value="08:02 AM"
            />
            <button
              aria-label="Choose Date"
              class="icon-button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon"
                data-jest-file-name="HiClock.svg"
                data-jest-svg-name="HiClock"
                data-testid="HiClock"
              />
            </button>
          </div>
        </div>
        <span
          id="date"
          style="visibility: hidden;"
        >
          August 9, 2024
        </span>
      </div>
    </div>
    <span
      data-test="current-value"
    >
      8/9/2024, 8:02 AM
    </span>
  </div>
</div>
`;

exports[`DateTimePicker with timezone Controlled Time Picker - (fr) should render w/ the provided date in the text field 1`] = `
<div>
  <div>
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <div
          class="HelperText"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <input
              aria-labelledby="date"
              class="TextField blue md icon-left show-icon"
              placeholder="Choose Date"
              type="text"
              value="08:02"
            />
            <button
              aria-label="Choose Date"
              class="icon-button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="icon"
                data-jest-file-name="HiClock.svg"
                data-jest-svg-name="HiClock"
                data-testid="HiClock"
              />
            </button>
          </div>
        </div>
        <span
          id="date"
          style="visibility: hidden;"
        >
          August 9, 2024
        </span>
      </div>
    </div>
    <span
      data-test="current-value"
    >
      09/08/2024 08:02
    </span>
  </div>
</div>
`;

exports[`DateTimePicker with timezone DateTimePicker: minDate and maxDate functionality does not allow clicking on a disabled date 1`] = `
<body>
  <div>
    <div>
      <div
        style="position: relative;"
      >
        <div
          style="position: relative;"
        >
          <div
            class="HelperText"
          >
            <div
              style="position: relative; width: 100%;"
            >
              <input
                aria-labelledby="date"
                class="TextField blue md icon-left show-icon"
                placeholder="Choose Date"
                type="text"
                value="2025/03/15 12:28 PM"
              />
              <button
                aria-label="Choose Date"
                class="icon-button"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="icon"
                  data-jest-file-name="HiMiniCalendarDays.svg"
                  data-jest-svg-name="HiMiniCalendarDays"
                  data-testid="HiMiniCalendarDays"
                />
              </button>
            </div>
          </div>
          <span
            id="date"
            style="visibility: hidden;"
          >
            March 15, 2025
          </span>
        </div>
        <div>
          <div
            aria-label="Choose a date"
            aria-modal="true"
            class="Panel md not-range-picker dtp-enter dtp-enter-active"
            role="dialog"
            style="position: absolute; top: 5px; left: 0px;"
          >
            <div
              class="DateTimeSwitcher md"
            >
              <button
                aria-label="Switch to days view"
                class="DateTimeSwitcherButton blue md selected"
                style="border-top-left-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiCalendarDays.svg"
                  data-jest-svg-name="HiCalendarDays"
                  data-testid="HiCalendarDays"
                />
              </button>
              <button
                aria-label="Switch to time view"
                class="DateTimeSwitcherButton blue md"
                style="border-top-right-radius: 0.5rem;"
              >
                <svg
                  aria-hidden="true"
                  data-jest-file-name="HiClock.svg"
                  data-jest-svg-name="HiClock"
                  data-testid="HiClock"
                />
              </button>
            </div>
            <div
              data-test="date-panel"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-live="polite"
                class="PanelHeader md"
              >
                <button
                  aria-label="Previous Month"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronLeft.svg"
                    data-jest-svg-name="HiChevronLeft"
                    data-testid="HiChevronLeft"
                  />
                </button>
                <div
                  class="PanelHeader-content"
                >
                  <button
                    aria-label="March"
                    class="PanelHeaderButton blue"
                  >
                    <span>
                      March
                    </span>
                  </button>
                  <button
                    aria-label="2025"
                    class="PanelHeaderButton blue"
                  >
                    <span>
                      2025
                    </span>
                  </button>
                </div>
                <button
                  aria-label="Next Month"
                >
                  <svg
                    aria-hidden="true"
                    data-jest-file-name="HiChevronRight.svg"
                    data-jest-svg-name="HiChevronRight"
                    data-testid="HiChevronRight"
                  />
                </button>
              </div>
              <section
                class="DaysGrid md"
                data-test="days-grid"
                role="grid"
              >
                <abbr
                  class="week-day"
                  title="Monday"
                >
                  Mon
                </abbr>
                <abbr
                  class="week-day"
                  title="Tuesday"
                >
                  Tue
                </abbr>
                <abbr
                  class="week-day"
                  title="Wednesday"
                >
                  Wed
                </abbr>
                <abbr
                  class="week-day"
                  title="Thursday"
                >
                  Thu
                </abbr>
                <abbr
                  class="week-day"
                  title="Friday"
                >
                  Fri
                </abbr>
                <abbr
                  class="week-day"
                  title="Saturday"
                >
                  Sat
                </abbr>
                <abbr
                  class="week-day"
                  title="Sunday"
                >
                  Sun
                </abbr>
                <div
                  role="gridcell"
                />
                <div
                  role="gridcell"
                />
                <div
                  role="gridcell"
                />
                <div
                  role="gridcell"
                />
                <div
                  role="gridcell"
                />
                <button
                  aria-disabled="true"
                  aria-label="March 1, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1740832093000"
                  data-test="1740832093000"
                  disabled=""
                  tabindex="-1"
                >
                  1
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 2, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1740918493000"
                  data-test="1740918493000"
                  disabled=""
                  tabindex="-1"
                >
                  2
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 3, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741004893000"
                  data-test="1741004893000"
                  disabled=""
                  tabindex="-1"
                >
                  3
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 4, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741091293000"
                  data-test="1741091293000"
                  disabled=""
                  tabindex="-1"
                >
                  4
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 5, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741177693000"
                  data-test="1741177693000"
                  disabled=""
                  tabindex="-1"
                >
                  5
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 6, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741264093000"
                  data-test="1741264093000"
                  disabled=""
                  tabindex="-1"
                >
                  6
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 7, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741350493000"
                  data-test="1741350493000"
                  disabled=""
                  tabindex="-1"
                >
                  7
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 8, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741436893000"
                  data-test="1741436893000"
                  disabled=""
                  tabindex="-1"
                >
                  8
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 9, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741523293000"
                  data-test="1741523293000"
                  disabled=""
                  tabindex="-1"
                >
                  9
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 10, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741609693000"
                  data-test="1741609693000"
                  disabled=""
                  tabindex="-1"
                >
                  10
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 11, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741696093000"
                  data-test="1741696093000"
                  disabled=""
                  tabindex="-1"
                >
                  11
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 12, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741782493000"
                  data-test="1741782493000"
                  disabled=""
                  tabindex="-1"
                >
                  12
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 13, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741868893000"
                  data-test="1741868893000"
                  disabled=""
                  tabindex="-1"
                >
                  13
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 14, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1741955293000"
                  data-test="1741955293000"
                  disabled=""
                  tabindex="-1"
                >
                  14
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 15, 2025"
                  aria-selected="true"
                  class="DaysGridCell selected today blue md"
                  data-date="1742041693000"
                  data-test="1742041693000"
                  disabled=""
                  tabindex="-1"
                >
                  15
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 16, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742128093000"
                  data-test="1742128093000"
                  disabled=""
                  tabindex="-1"
                >
                  16
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 17, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742214493000"
                  data-test="1742214493000"
                  disabled=""
                  tabindex="-1"
                >
                  17
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 18, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742300893000"
                  data-test="1742300893000"
                  disabled=""
                  tabindex="-1"
                >
                  18
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 19, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742387293000"
                  data-test="1742387293000"
                  disabled=""
                  tabindex="-1"
                >
                  19
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 20, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742473693000"
                  data-test="1742473693000"
                  disabled=""
                  tabindex="-1"
                >
                  20
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 21, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742560093000"
                  data-test="1742560093000"
                  disabled=""
                  tabindex="-1"
                >
                  21
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 22, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742646493000"
                  data-test="1742646493000"
                  disabled=""
                  tabindex="-1"
                >
                  22
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 23, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742732893000"
                  data-test="1742732893000"
                  disabled=""
                  tabindex="-1"
                >
                  23
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 24, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742819293000"
                  data-test="1742819293000"
                  disabled=""
                  tabindex="-1"
                >
                  24
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 25, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742905693000"
                  data-test="1742905693000"
                  disabled=""
                  tabindex="-1"
                >
                  25
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 26, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1742992093000"
                  data-test="1742992093000"
                  disabled=""
                  tabindex="-1"
                >
                  26
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 27, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1743078493000"
                  data-test="1743078493000"
                  disabled=""
                  tabindex="-1"
                >
                  27
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 28, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1743164893000"
                  data-test="1743164893000"
                  disabled=""
                  tabindex="-1"
                >
                  28
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 29, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1743251293000"
                  data-test="1743251293000"
                  disabled=""
                  tabindex="-1"
                >
                  29
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 30, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1743337693000"
                  data-test="1743337693000"
                  disabled=""
                  tabindex="-1"
                >
                  30
                </button>
                <button
                  aria-disabled="true"
                  aria-label="March 31, 2025"
                  aria-selected="false"
                  class="DaysGridCell blue md"
                  data-date="1743424093000"
                  data-test="1743424093000"
                  disabled=""
                  tabindex="-1"
                >
                  31
                </button>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
